@@ -7,6 +7,7 @@ NEXT
     - add --stdin option for 'run'. (GH#5)
     - abort hook chain if one of them fails.
     - print the name of the phase when running its hooks. (GH#4)
+    - don't try to read stdin if there's nothign there. (GH#8)
 
 0.0.1 2019-11-11
     - Initial release.
